[project]
name = "ahu-paimon-toolkit"
version = "0.1.0"
description = "A special toolkit for SiriusAhu's FYP, Player-Aware Intelligent Monitoring and Operations Navigator"
readme = "README.md"
authors = [{ name = "SiriusAhu", email = "SiriusLLLUUU@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "nvidia-ml-py>=13.590.48",
    "openai>=2.24.0",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ahu_paimon_toolkit"]

artifacts = ["*.jpg"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
